# dof-rag

./: .gitignore  .mise.toml  .python-version  DOF-Processor-Consulta.md  DOF_Document_Processing_and_Query.ipynb  DOF_Embeddings_Generator.ipynb  LICENSE  README.md  README_2.md  ai_agent.ipynb  create_embeddings.py  embeddings.py  extract_embeddings.py  extract_markdown.py  extract_markdown.sh  faiss_index.idx  faiss_index.json  gemini_query.py  get_dof.py  get_word_dof.py  prueba_better_embeddings_smooth.py  pyproject.toml  test_structured_headers.md  x11.py
Improve_embeddings_1_page_chunk/: DOF-Processor-Consulta.md  DOF-Processor-Query-EN.md  extract_embeddings_1_page.py  extract_embeddings_1_page_structured_headers.py  gemini_query.py  pyproject.toml
dof_word/: README.md
extract/: documento.md
extracted/2025/01/: 02012025-MAT.md  03012025-MAT.md  06012025-MAT.md  07012025-MAT.md  08012025-MAT.md  09012025-MAT.md  10012025-MAT.md  13012025-MAT.md  14012025-MAT.md  15012025-MAT.md  16012025-MAT.md  17012025-MAT.md  20012025-MAT.md  21012025-MAT.md
modules_captions/: README.md  __init__.py  config.json  debug_config.py  extract_captions.py
modules_captions/clients/: __init__.py  openai.py
modules_captions/db/: __init__.py  manager.py
modules_captions/utils/: __init__.py  error_handler.py  file_processor.py
