[project]
name = "dof-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.2.0",
    "pikepdf>=9.5.2",
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[[tool.pyright.overrides]]
module = ["google.*"]
follow_untyped_imports = true
