[project]
name = "dof-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marker-pdf>=1.5.5",
    "fastlite>=0.1.2",
    "requests>=2.32.3",
    "sqlite-vec>=0.1.6",
    "typer>=0.15.1",
    "ipykernel>=6.29.5",
    "marimo[sql]>=0.11.12",
    "sqlmodel>=0.0.23",
]
